<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickUpSports2</string>
    <string name="user_storage_file">current_user</string>
    <string name="app_id">1634667900087388</string>

    <string name="cancel">Cancel</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="post">Post</string>


    <!-- menu items -->
    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="action_search">Search</string>

    <!-- activity_main_view_screen -->
    <string name="attendButton">Attend</string>
    <string name="leaveButton">Leave</string>

    <!-- activity view user -->
    <string name="title_activity_view_user">View User</string>

    <!-- activity_create_event_screen -->
    <string name="title_activity_create_event">CreateEvent</string>

    <string name="create_event_title">Create a Game</string>
    <string name="event_name_heading_text">Event Name: </string>
    <string name="event_location_heading_text">Where? </string>
    <string name="event_cost_heading_text">How much does it cost? </string>
    <string name="event_sport_heading_text">What do you want to play? </string>
    <string name="event_privacy_heading_text">Who can come? </string>
    <string name="event_attendance_heading_text">How many? </string>
    <string name="event_time_heading_text">When? </string>
    <string name="event_notes_heading">Any other notes?</string>
    <string name="single_sport_prompt">Select a sport</string>

    <string-array name="sports">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Boxing</item>
        <item>Cricket</item>
        <item>Cycling</item>
        <item>Fencing</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Hockey</item>
        <item>Lacrosse</item>
        <item>Racquetball</item>
        <item>Rock Climbing</item>
        <item>Rowing</item>
        <item>Rugby</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Softball</item>
        <item>Squash</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Water Polo</item>
    </string-array>

    <string-array name="cost_options">
        <item>Free</item>
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
    </string-array>

    <string-array name="privacy_options">
        <item>Invite Only</item>
        <item>Public</item>
    </string-array>

    <!-- view event activity -->
    <string name="title_activity_view_event">ViewEvent</string>

    <string name="created_by">Created by </string>
    <string name="title_activity_main_activity_2">MainActivity_2</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Pane -->
    <string name="title_activity_navigation_pane">NavigationPane</string>
    <string name="drawer_open_text">Navigation</string>
    <string-array name="navigation_pane_titles">
        <item>Profile</item>
        <item>Teams</item>
        <item>Events</item>
        <item>Invitations</item>
        <item>Schedule</item>
    </string-array>

    <!--Location Picker Activity -->
    <string name="title_activity_location_picker">LocationPicker</string>
    <string name="locationpicker_button_search">Search</string>
    <string name="locationpicker_button_finish">Finish</string>
    <string name="locationpicker_button_zoom_in">+</string>
    <string name="locationpicker_button_zoom_out">-</string>

    <!--Edit User Dialog -->
    <string name="multi_sport_prompt">Select favorite sports</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- Search Activity -->
    <string-array name="search_types">
        <item>Event</item>
        <item>User</item>
    </string-array>



</resources>
