<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        style="@style/minor_text"
        android:text="@string/event_name_heading_text"
        android:id="@+id/event_name_heading" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventNameInput"
        android:layout_below="@+id/event_name_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/minor_text"
        android:text="@string/event_sport_heading_text"
        android:id="@+id/event_sport_heading"
        android:layout_below="@+id/event_name_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sport_spinner"
        android:layout_below="@+id/event_sport_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        style="@style/minor_text"
        android:text="@string/event_location_heading_text"
        android:id="@+id/event_location_heading"
        android:layout_below="@+id/sport_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventLocationInput"
        android:layout_below="@+id/event_location_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/minor_text"
        android:text="@string/event_cost_heading_text"
        android:id="@+id/event_cost_heading"
        android:layout_below="@+id/eventLocationInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cost_spinner"
        android:layout_below="@+id/event_cost_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        style="@style/minor_text"
        android:text="@string/event_privacy_heading_text"
        android:id="@+id/event_privacy_heading"
        android:layout_below="@+id/eventLocationInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/privacy_spinner"
        android:layout_below="@+id/event_privacy_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        style="@style/minor_text"
        android:text="@string/event_attendance_heading_text"
        android:id="@+id/event_attendance_heading"
        android:layout_below="@+id/eventLocationInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/eventAttendanceInput"
        android:ems="10"
        android:layout_below="@+id/event_attendance_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        style="@style/minor_text"
        android:text="@string/event_time_heading_text"
        android:id="@+id/event_time_heading"
        android:layout_below="@+id/eventAttendanceInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eventDateInput"
        android:calendarViewShown="false"
        android:layout_below="@+id/event_time_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        style="@style/minor_text"
        android:text="@string/event_notes_heading"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/eventNotesInput"
        android:layout_below="@+id/event_notes_heading"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/invite_friends"
        android:id="@+id/create_event_invite_button"
        android:layout_below="@+id/eventNotesInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/post"
        android:id="@+id/create_event_post_button"
        android:layout_below="@+id/create_event_invite_button"
        android:layout_alignParentRight="true" />

</LinearLayout>